# ailang

./: .gitignore  00-WORKING-NOTES.md  01-DESIGN.md  02-BUILD-ORCHESTRATION.md  03-PROMPTS.md  Cargo.toml  GLYPH-deck.pptx  README.md  build_deck.js  controller.md  executor.md  index.html  reddit-post.md  reviewer.md  sommario.md  spec-template.md
.planning/: ROADMAP.md  STATE.md
.planning/quick/260608-f5y-fix-orchestrator-file-corruption-and-ens/: 260608-f5y-PLAN.md  260608-f5y-SUMMARY.md
.planning/quick/260608-lon-implement-0012-builtin-nodes-fix-broken-/: 260608-lon-PLAN.md  260608-lon-SUMMARY.md
.planning/quick/260609-ele-implement-ailang-phase-2-tasks-0013-0015/: 260609-ele-PLAN.md  260609-ele-SUMMARY.md
crates/ailang-cli/: Cargo.toml
crates/ailang-cli/examples/: gen_examples.rs
crates/ailang-cli/src/: main.rs
crates/ailang-core/: Cargo.toml
crates/ailang-core/src/: builder.rs  builder_tests.rs  graph.rs  graph_effects_tests.rs  graph_tests.rs  lib.rs  node_id.rs  node_id_tests.rs  serial.rs  serial_tests.rs  ty.rs  ty_tests.rs  unify.rs  unify_tests.rs  validator.rs  (+1 more)
crates/ailang-effects/: Cargo.toml
crates/ailang-exec/: Cargo.toml
crates/ailang-exec/src/: eval.rs  eval_tests.rs  lib.rs  registry.rs  registry_tests.rs  value.rs  value_tests.rs
crates/ailang-fold/: Cargo.toml
crates/ailang-nodes/: Cargo.toml
crates/ailang-transpile/: Cargo.toml
examples/: 01_hello.ailang.json  02_calculator.ailang.json  03_lcg_random.ailang.json  04_clamp.ailang.json  05_fizzbuzz_check.ailang.json  README.md
orchestrator/: orchestrate.py
orchestrator/prompts/: executor.md  reviewer.md
orchestrator/tasks/: 0003-type-unify.md  0005-effect-set.md  0007-serialization.md  0009-node-registry.md  0010-eval.md  0012-builtin-nodes.md  0013-codegen-wiring.md  0015-cli.md  0016-const-literals.md  0017-graph-validator.md  0018-more-builtins.md  0020-list-type.md  0021-list-builtins.md  0022-graph-passes.md  0023-graph-file-io.md
(+17 files in other folders)
