[workspace]
resolver = "2"
members = [
    "crates/ailang-core",
    "crates/ailang-effects",
    "crates/ailang-nodes",
    "crates/ailang-fold",
    "crates/ailang-exec",
    "crates/ailang-transpile",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "TBD"

[workspace.dependencies]
blake3       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
